--- a/templates/about.html
+++ b/templates/about.html
@@ -61,6 +61,20 @@
         color: #fafafa;
       }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-141137456-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-141137456-1");
+    </script>
     <script>
       function select(id) {
         console.log(id);
