--- a/templates/matchfeed.html
+++ b/templates/matchfeed.html
@@ -85,11 +85,16 @@
         outline: 0;
       }
       .loader {
+        position:absolute;
+        top: 30%;
+        right: 50%;
+        margin-top:-100px;
+        margin-right:-100px;
         border: 5px solid #ffffff;
         border-radius: 50%;
         border-top: 5px solid #4f595f;
-        width: 25px;
-        height: 25px;
+        width: 200px;
+        height: 200px;
         -webkit-animation: spin 2s linear infinite;
         /* Safari */
         animation: spin 2s linear infinite;
